fix color contrast

--- a/assets/css/hamvocke.css
+++ b/assets/css/hamvocke.css
@@ -16,11 +16,11 @@
 @media (prefers-color-scheme: dark) {
     :root {
         --white: #f6f6f6;
-        --black: #223144;
+        --black: #1B2736;
         --text: var(--white);
         --background: var(--black);
-        --code: #151E29;
-        --accent: #F04282;
+        --code: #0E141B;
+        --accent: #F45283;
         --light-accent: #FFBC42;
 
         --lighter-bg: #30455f;
